<resources>
    <string name="app_name">ITPLN Sehat</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="design_by">Made with ❤ </string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="daftar">REGISTER</string>
    <string name="email">Email</string>
    <string name="fullName">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noAccount">Pengguna Baru? Daftar Sekarang</string>
    <string name="haveAccount">Sudah Punya Akun? Sign In</string>
    <string name="Born">Tanggal Lahir :</string>
    <string name="nomor_telp">Nomor Telpon</string>
    <string name="profile_user">Profile User</string>
    <string name="nama">Nama :</string>
    <string name="emailBeranda">Email :</string>
    <string name="nomorBeranda">Nomor :</string>
    <string name="spasi" />
    <string name="tgl_lahir">Tgl Lahir :</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="CekJadwal">Cek Jadwal Anda</string>
    <string name="SignOut">SIGN OUT</string>
    <string name="BuatJanji">Buat Janji Dengan Dokter</string>
    <string name="Alamat">Cek Lokasi Rumah Sakit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example">(example)</string>
    <string name="spjantung">Spesialis Kardiologi</string>
    <string name="spParu">Spesialis Pulmonologi</string>
    <string name="spAnak">Spesialis Pediatris</string>
    <string name="spTulang">Spesialis Ortopedi</string>
    <string name="spOtak">Spesialis Neurologi</string>
    <string name="our_website">Our Website</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
    <string name="spesialis_pulmonologi">Spesialis Pulmonologi</string>
    <string name="dr_banner">Dr. Banner</string>
    <string name="dr_kamaludin">Dr. Kamaludin</string>
    <string name="dr_kehfa">Dr. Kehfa</string>
    <string name="dr_lucille">Dr. Lucille</string>
    <string name="dr_meisya">Dr. Meisya</string>
    <string name="dr_strange">Dr. Strange</string>
    <string name="spesialis_jantung">Spesialis Kardiologi</string>
    <string name="jadwal_anda">Jadwal Anda</string>
    <string name="buat_jadwal_anda">Buat Jadwal Anda</string>
    <string name="pilih_dokter">Pilih Dokter</string>
    <string name="cancel">cancel</string>

    <string-array name="list_dokter">
        <item>Dr. Banner</item>
        <item>Dr. Kamaludin</item>
        <item>Dr. Kehfa</item>
        <item>Dr.Lucille</item>
        <item>Dr.Meisya</item>
        <item>Dr. Strange</item>
    </string-array>
</resources>