<?xml version="1.0" encoding="utf-8"?>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Beranda"
        android:layout_width="409dp"
        android:layout_height="200dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user"
            android:gravity="center"
            android:textSize="25sp"/>
        <TextView/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView/>
            <TextView
                android:text="@string/nama"
                android:textSize="20sp"/>

            <TextView
                android:gravity="center"
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView/>
            <TextView
                android:text="@string/emailBeranda"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/EmailBeranda"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView/>
            <TextView
                android:text="@string/nomorBeranda"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/nomorTelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="               "
                android:textSize="20sp"/>

            <TextView
                android:text="@string/tgl_lahir"
                android:gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tglLahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>