<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daftar"
    android:background="@color/bgDaftar">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/groupDaftar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bgMain"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/cantarell"
                android:text="@string/daftar"
                android:textColor="@color/fontWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Logo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFullName"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/cardview_shadow_end_color"
                app:cardCornerRadius="30dp"
                app:cardElevation="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bgedittext"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/fullName"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardEmail"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cardview_shadow_end_color"
                app:cardCornerRadius="30dp"
                app:cardElevation="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bgedittext"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/email"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/datePickerGroup"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardDatePicker"
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:id="@+id/btn_DatePicker"
                        android:textColor="@color/black"
                        android:text="Date"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"
                        android:drawableLeft="@drawable/calendar"
                        android:backgroundTint="@color/date_picker"
                        android:layout_gravity="center"
                        android:paddingLeft="20dp"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/born"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cantarell"
                    android:textAlignment="viewStart"
                    android:text="@string/Born"
                    android:textColor="@color/fontWhite"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardDatePicker"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardUsername"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cardview_shadow_end_color"
                app:cardCornerRadius="30dp"
                app:cardElevation="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/Nomor_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bgedittext"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/nomor_telp"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPassword_daftar"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cardview_shadow_end_color"
                app:cardCornerRadius="30dp"
                app:cardElevation="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardUsername">

                <EditText
                    android:id="@+id/password_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bgedittext"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/password"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:password="true"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubmit_daftar"
                android:layout_width="315dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                app:cardCornerRadius="30dp"
                app:cardElevation="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardPassword_daftar">

                <Button
                    android:backgroundTint="@color/yellow"
                    android:id="@+id/btn_SignUp"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cantarell"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:textAlignment="center"
                android:id="@+id/SignIn_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:clickable="true"
                android:text="@string/haveAccount"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSubmit" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/HakCipta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/design_by"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDaftar" />

</androidx.constraintlayout.widget.ConstraintLayout>