<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Spesialis_Kardiologi"
    android:background="@drawable/pln">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="320dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/Back"
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrow_back"
            android:clickable="true"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSpesialis"
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/bgMain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                android:backgroundTint="@color/fontWhite"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/ic_Profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/jantung"
                    android:background="@color/fontWhite" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spesialis_jantung"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/fontWhite"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:layout_marginTop="15dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="280dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/spesialis1"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dr_banner"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"
                                android:textSize="12sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/spesialis2"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dr_lucille"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"
                                android:textSize="12sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/spesialis3"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dr_kehfa"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"
                                android:textSize="12sp"/>

                        </LinearLayout>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/spesialis4"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dr_strange"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:textSize="12sp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/spesialis5"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dr_kamaludin"
                                android:textSize="12sp"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/spesialis6"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dr_meisya"
                                android:textSize="12sp"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"/>

                        </LinearLayout>



                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_gravity="center"
                android:id="@+id/HakCipta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/design_by"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>